--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="img-box">
-                    <img src="images/slider-img.jpg" alt="">
+                    <img src="images/img_ciclovida2.svg" alt="">
                   </div>
                 </div>
               </div>
@@ -143,9 +143,9 @@
                       </button>
                     </div>
                     <h1>
-                      Mico <br>
+                      Ciclo <br>
                       <span>
-                        Hospital
+                        Vida
                       </span>
                     </h1>
                     <p>
@@ -159,7 +159,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="img-box">
-                    <img src="images/slider-img.jpg" alt="">
+                    <img src="images/img_ciclovida3.svg" alt="">
                   </div>
                 </div>
               </div>
@@ -176,14 +176,13 @@
                       </button>
                     </div>
                     <h1>
-                      Mico <br>
+                      Ciclo <br>
                       <span>
-                        Hospital
+                        Vida
                       </span>
                     </h1>
                     <p>
-                      when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
-                      distribution of letters, as opposed to
+                      Participe da nossa campanha de arrecadação de alimentos! Sua doação pode fazer a diferença na vida de muitas pessoas que precisam. Juntos, podemos combater a fome e levar esperança a quem mais necessita.
                     </p>
                     <a href="">
                       Fale Conosco
@@ -192,7 +191,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="img-box">
-                    <img src="images/slider-img.jpg" alt="">
+                    <img src="images/img_ciclovida1.svg" alt="">
                   </div>
                 </div>
               </div>
@@ -275,46 +274,6 @@
       </div>
     </div>
   </section>
-
-
-  <!-- end book section -->
-
-
-  <!-- about section -->
-
-  <section class="about_section">
-    <div class="container  ">
-      <div class="row">
-        <div class="col-md-6 ">
-          <div class="img-box">
-            <img src="images/about-img.jpg" alt="">
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="detail-box">
-            <div class="heading_container">
-              <h2>
-                About <span>Hospital</span>
-              </h2>
-            </div>
-            <p>
-              has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here',
-              making it look like readable English. Many desktop publishing packages and web page editors has a
-              more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it
-              look like readable English. Many desktop publishing packages and web page editors
-            </p>
-            <a href="">
-              Read More
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- end about section -->
-
-
   <!-- treatment section -->
 
   <section class="treatment_section layout_padding">
@@ -651,133 +610,6 @@
     </div>
   </section>
   <!-- end contact section -->
-
-  <!-- info section -->
-  <section class="info_section ">
-    <div class="container">
-      <div class="info_bottom layout_padding2">
-        <div class="row info_main_row">
-          <div class="col-md-6 col-lg-3">
-            <h5>
-              Address
-            </h5>
-            <div class="info_contact">
-              <a href="">
-                <i class="fa fa-map-marker" aria-hidden="true"></i>
-                <span>
-                  Location
-                </span>
-              </a>
-              <a href="">
-                <i class="fa fa-phone" aria-hidden="true"></i>
-                <span>
-                  Call +01 1234567890
-                </span>
-              </a>
-              <a href="">
-                <i class="fa fa-envelope"></i>
-                <span>
-                  demo@gmail.com
-                </span>
-              </a>
-            </div>
-            <div class="social_box">
-              <a href="">
-                <i class="fa fa-facebook" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-twitter" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-linkedin" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-instagram" aria-hidden="true"></i>
-              </a>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3">
-            <div class="info_links">
-              <h5>
-                Useful link
-              </h5>
-              <div class="info_links_menu">
-                <a class="active" href="index.html">
-                  Home
-                </a>
-                <a href="about.html">
-                  About
-                </a>
-                <a href="treatment.html">
-                  Treatment
-                </a>
-                <a href="doctor.html">
-                  Doctors
-                </a>
-                <a href="testimonial.html">
-                  Testimonial
-                </a>
-                <a href="contact.html">
-                  Contact us
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3">
-            <div class="info_post">
-              <h5>
-                LATEST POSTS
-              </h5>
-              <div class="post_box">
-                <div class="img-box">
-                  <img src="images/post1.jpg" alt="">
-                </div>
-                <p>
-                  Normal
-                  distribution
-                </p>
-              </div>
-              <div class="post_box">
-                <div class="img-box">
-                  <img src="images/post2.jpg" alt="">
-                </div>
-                <p>
-                  Normal
-                  distribution
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3">
-            <div class="info_post">
-              <h5>
-                News
-              </h5>
-              <div class="post_box">
-                <div class="img-box">
-                  <img src="images/post3.jpg" alt="">
-                </div>
-                <p>
-                  Normal
-                  distribution
-                </p>
-              </div>
-              <div class="post_box">
-                <div class="img-box">
-                  <img src="images/post4.png" alt="">
-                </div>
-                <p>
-                  Normal
-                  distribution
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- end info_section -->
 
 
   <!-- footer section -->
