--- a/login.html
+++ b/login.html
@@ -17,6 +17,7 @@
   <link href="css/responsive.css" rel="stylesheet" />
 
   <style>
+
     body {
       font-family: 'Roboto', sans-serif;
       background-color: #f9f9f9;
@@ -44,31 +45,62 @@
     }
 
     .btn-primary {
-      padding: 10px 30px;
-      border-radius: 8px;
+      border: none;
+      text-transform: uppercase;
+      display: inline-block;
+      padding: 15px 65px;
+      background-color: #659339;
+      color: #ffffff;
+      border-radius: 0;
       font-weight: bold;
-      background-color: #252525;
     }
 
     .btn-primary:hover {
-      background-color: #000000;
-    }
-
-    .btn-top-left {
-      position: absolute;
-      top: 20px;
-      left: 20px;
-      display: flex;
-      gap: 10px;
-    }
-
-    .btn-secondary {
-      font-size: 14px;
-      padding: 6px 14px;
-      border-radius: 6px;
+      background-color: #3a5421;
     }
   </style>
 </head>
+
+<header class="header_section">
+  <div class="header_bottom">
+    <div class="container-fluid">
+      <nav class="navbar navbar-expand-lg custom_nav-container ">
+        <a class="navbar-brand" href="index.html">
+          <img class=logo src="images/whitelogo.svg" alt="">
+        </a>
+        </a>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class=""> </span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <div class="d-flex mr-auto flex-column flex-lg-row align-items-center">
+            <ul class="navbar-nav  ">
+              <li class="nav-item active">
+                <a class="nav-link" href="index.html"> Início<span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about.html"> Sobre</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Catálogo</a>
+              </li>
+            </ul>
+          </div>
+          <div class="quote_btn-container">
+            <div id="labelUsuario"></div>
+            <a href="cadastro.html">
+              <i class="fa fa-user" aria-hidden="true"></i>
+              <span>
+                Cadastrar
+              </span>
+            </a>
+          </div>
+        </div>
+      </nav>
+    </div>
+  </div>
+</header>
 
 <body class="sub_page">
 
@@ -77,11 +109,6 @@
       <div class="row justify-content-center">
         <div class="col-md-8 col-lg-6">
           <div class="form-box">
-            <!-- Botões Voltar e Sair -->
-            <div class="btn-top-left">
-              <a href="index.html" class="btn btn-secondary">Voltar</a>
-            </div>
-
             <img class="img_login" src="images/img_para_login.png" alt="Imagem de Login">
 
             <form id="form-login" onsubmit="fazerLogin(event)">
