api de iten e ponto de colega

--- a/login.html
+++ b/login.html
@@ -139,7 +139,7 @@
   <footer class="footer_section mt-5">
     <div class="container text-center">
       <p>
-        &copy; <span id="displayYear"></span> Todos os direitos reservados - Mico
+        &copy; <span id="displayYear"></span> Todos os direitos reservados - CicloVida
       </p>
     </div>
   </footer>
