--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Mico</title>
+  <title>CicloVida</title>
 
 
   <!-- bootstrap core css -->
