--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="contact.html">Catálogo</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="editar_user.html">Perfil</a>
+                  </li>
                 </ul>
               </div>
               <div class="quote_btn-container">
