mudança de paleta

--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
 
   <title>CicloVida</title>
 
+<!-- padrao #044fa1 por #044fa1 
+ 
+amarelo #fde01b
+#fde01b
 
+-->
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
