integracao com api de editar perfil

--- a/editar_user.html
+++ b/editar_user.html
@@ -105,7 +105,7 @@
 
             <div class="form-group col-md-6">
               <label>Tipo de Pessoa</label>
-              <select id="tipo" class="form-control" required>
+              <select id="tipo" class="form-control" >
                 <option value="fisica">Pessoa Física</option>
                 <option value="juridica">Pessoa Jurídica</option>
               </select>
