--- a/lista_produtos.html
+++ b/lista_produtos.html
@@ -1,148 +1,136 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 
 <head>
-  <!-- Basic -->
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-
   <title>Lista de produtos para doação</title>
 
-  <!-- bootstrap core css -->
+  <!-- CSS Bootstrap -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
-
-  <!-- fonts style -->
+  <!-- Fontes -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-
-  <!--owl slider stylesheet -->
-  <link rel="stylesheet" type="text/css"
-    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
-
-  <!-- font awesome style -->
   <link href="css/font-awesome.min.css" rel="stylesheet" />
-  <!-- nice select -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/css/nice-select.min.css"
-    integrity="sha256-mLBIhmBvigTFWPSCtvdu6a76T+3Xyt+K571hupeFLg4=" crossorigin="anonymous" />
-  <!-- datepicker -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.css">
-  <!-- Custom styles for this template -->
-  <link href="css/style.css" rel="stylesheet" />
-  <!-- responsive style -->
-  <link href="css/responsive.css" rel="stylesheet" />
 
+  <!-- DataTables -->
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/dataTables.bootstrap4.min.css" />
+  <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.5.0/css/responsive.bootstrap4.min.css" />
+
+  <!-- Estilos personalizados -->
+  <link href="css/style.css" rel="stylesheet" />
+  <link href="css/responsive.css" rel="stylesheet" />
 </head>
 
 <body class="sub_page">
   <header class="header_section">
     <div class="header_bottom">
       <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg custom_nav-container ">
-
-
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <nav class="navbar navbar-expand-lg custom_nav-container">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
             <span class=""> </span>
           </button>
-
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="d-flex mr-auto flex-column flex-lg-row align-items-center">
-              <ul class="navbar-nav  ">
-                <li class="nav-item active">
-                  <a class="nav-link" href="index.html"> Início<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="about.html"> Sobre</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Catálogo</a>
-                </li>
+              <ul class="navbar-nav">
+                <li class="nav-item active"><a class="nav-link" href="index.html">Início</a></li>
+                <li class="nav-item"><a class="nav-link" href="about.html">Sobre</a></li>
+                <li class="nav-item"><a class="nav-link" href="contact.html">Catálogo</a></li>
               </ul>
             </div>
             <div class="quote_btn-container">
-
               <div id="labelUsuario"></div>
               <a href="login.html">
                 <i class="fa fa-user" aria-hidden="true"></i>
-                <span>
-                  Entrar
-                </span>
+                <span>Entrar</span>
               </a>
             </div>
-          </header>
+          </div>
+        </nav>
+      </div>
+    </div>
+  </header>
 
-          <section class="contact_section layout_padding-bottom">
-            <div class="container d-flex justify-content-center">
-              <div class="card shadow-lg p-4" style="max-width: 800px; width: 100%; margin-top: 30px; border-radius: 20px;">
-                <div class="text-center mb-4">
-                  <img src="images/logo2.svg" alt="Logo da Marca" style="height: 80px; margin-bottom: 10px;">
-                  <h3>Itens disponíveis para doação</h3>
-                  <p>Veja abaixo os itens que estão disponíveis para receber</p>
-                </div>
-          
-                <!-- Lista de Itens -->
-                <div id="lista-itens" class="list-group">
-                </div>
-              </div>
-            </div>
-          </section>
+  <section class="contact_section layout_padding-bottom">
+    <div class="container">
+      <div class="card shadow-lg p-4" style="margin-top: 30px; border-radius: 20px;">
+        <div class="text-center mb-4">
+          <img src="images/logo2.svg" alt="Logo da Marca" style="height: 80px; margin-bottom: 10px;">
+          <h3>Itens para doação</h3>
+          <p>Veja abaixo os itens disponíveis e solicite aquele que precisar</p>
+        </div>
 
-  <!-- footer section -->
+        <div class="d-flex justify-content-between align-items-center mb-3">
+          <h5 class="mb-0">Lista de Produtos</h5>
+          <a href="cadastro_produto.html" class="btn btn-info">
+            <i class="fa fa-plus"></i> Cadastrar Produto
+          </a>
+        </div>
+
+        <div class="table-responsive">
+          <table id="tabela-itens" class="table table-bordered table-striped dt-responsive nowrap" width="100%">
+            <thead class="thead-dark">
+              <tr>
+                <th>Nome</th>
+                <th>Descrição</th>
+                <th>Quantidade</th>
+                <th>Ação</th>
+              </tr>
+            </thead>
+            <tbody></tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <footer class="footer_section">
     <div class="container">
-      <p>
-        &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
-      </p>
+      <p>&copy; <span id="displayYear"></span> All Rights Reserved By <a href="https://html.design/">Free Html Templates</a></p>
     </div>
   </footer>
-  <!-- footer section -->
 
-  <!-- jQery -->
+  <!-- Scripts -->
   <script src="js/jquery-3.4.1.min.js"></script>
-  <!-- bootstrap js -->
   <script src="js/bootstrap.js"></script>
-  <!-- nice select -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js"
-    integrity="sha256-Zr3vByTlMGQhvMfgkQ5BtWRSKBGa2QlspKYJnkjZTmo=" crossorigin="anonymous"></script>
-  <!-- owl slider -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-  <!-- datepicker -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.js"></script>
-  <!-- custom js -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
-  <script src="js/custom.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+  <!-- DataTables -->
+  <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+  <script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap4.min.js"></script>
+  <script src="https://cdn.datatables.net/responsive/2.5.0/js/dataTables.responsive.min.js"></script>
+  <script src="https://cdn.datatables.net/responsive/2.5.0/js/responsive.bootstrap4.min.js"></script>
+
   <script>
-    document.addEventListener('DOMContentLoaded', function () {
-      axios.get('http://ciclovida.ki6.com.br/ciclovida/api_php/item_doacao.php')
+    $(document).ready(function () {
+      axios.get('http://localhost/ciclovida/api_php/item.php')
         .then(function (response) {
-          const lista = document.getElementById('lista-itens');
-          const itens = response.data;
-  
-          if (Array.isArray(itens) && itens.length > 0) {
-            itens.forEach(function (item) {
-              const itemHTML = `
-                <div class="list-group-item d-flex justify-content-between align-items-center flex-wrap border rounded mb-2 p-3">
-                  <div>
-                    <h5 class="mb-1">${item.nome}</h5>
-                    <p class="mb-1">${item.descricao || 'Sem descrição'}</p>
-                  </div>
-                  <button class="btn btn-success">Solicitar</button>
-                </div>
-              `;
-              lista.insertAdjacentHTML('beforeend', itemHTML);
-            });
-          } else {
-            lista.innerHTML = '<p class="text-muted">Nenhum item disponível no momento.</p>';
-          }
+          const dados = response.data;
+          const tabela = $('#tabela-itens').DataTable({
+            data: dados,
+            responsive: true,
+            columns: [
+              { data: 'nome' },
+              { data: 'descricao', defaultContent: 'Sem descrição' },
+              { data: 'quantidade' },
+              {
+                data: null,
+                render: function () {
+                  return '<button class="btn btn-success btn-sm">Solicitar</button>';
+                }
+              }
+            ],
+            language: {
+              url: "//cdn.datatables.net/plug-ins/1.13.6/i18n/pt-BR.json"
+            }
+          });
         })
         .catch(function (error) {
-          console.error('Erro ao carregar itens:', error);
-          document.getElementById('lista-itens').innerHTML = '<p class="text-danger">Erro ao carregar itens.</p>';
+          console.error('Erro ao carregar dados:', error);
+          alert('Erro ao carregar os itens. Tente novamente mais tarde.');
         });
     });
   </script>
 </body>
+
 </html>
