--- a/cadastro_produto.html
+++ b/cadastro_produto.html
@@ -160,7 +160,7 @@
         valor: 0.00
       };
   
-      axios.post('http://localhost/ciclovida/api_php/item.php', dadosCadastro)
+      axios.post('https://ciclovida.ki6.com.br/ciclovida/api_php/item.php', dadosCadastro)
         .then(function (response) {
           alert('Produto cadastrado com sucesso!');
           window.location.href = 'lista_produtos.html';
