--- a/index.html
+++ b/index.html
@@ -652,6 +652,7 @@ amarelo #fde01b
   <script>
     var usuarioLogado = localStorage.getItem('usuarioLogado');
     var labelUsuario = document.getElementById('labelUsuario');
+    console.log(usuarioLogado);
     labelUsuario.innerHTML = usuarioLogado ? 'Usuário: ' + JSON.parse(usuarioLogado).documento : 'Usuário não logado';
   </script>
 
